// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteAndShare/> renders correctly 1`] = `
<Fragment>
  <Relay(DebateStepPageAbsoluteVoteAndShare)
    body="blabla le body"
    isAuthenticated={true}
    isMobile={false}
    setShowArgumentForm={[Function]}
    setVoteState={[Function]}
    showArgumentForm={true}
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "debate": Object {
          "$fragmentRefs": null,
          "allArguments": Object {
            "totalCount": 10,
          },
          "argumentsAgainst": Object {
            "totalCount": 5,
          },
          "argumentsFor": Object {
            "totalCount": 5,
          },
          "id": "debate1",
          "votes": Object {
            "totalCount": 5,
          },
          "yesVotes": Object {
            "totalCount": 4,
          },
        },
        "timeRange": Object {
          "endAt": "2030-03-10 00:00:00",
        },
        "timeless": false,
        "url": "step/123",
      }
    }
    title="blabla le title"
    voteState="NONE"
  />
  <ForwardRef
    align="center"
    direction="column"
    width="100%"
  >
    <DebateStepPageVote
      debateId="debate1"
      isAuthenticated={true}
      onSuccess={[Function]}
      viewerHasArgument={false}
    />
  </ForwardRef>
</Fragment>
`;

exports[`<DebateStepPageVoteAndShare/> renders correctly on mobile 1`] = `
<Fragment>
  <Relay(DebateStepPageAbsoluteVoteAndShare)
    body="blabla le body"
    isAuthenticated={true}
    isMobile={true}
    setShowArgumentForm={[Function]}
    setVoteState={[Function]}
    showArgumentForm={true}
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "debate": Object {
          "$fragmentRefs": null,
          "allArguments": Object {
            "totalCount": 10,
          },
          "argumentsAgainst": Object {
            "totalCount": 5,
          },
          "argumentsFor": Object {
            "totalCount": 5,
          },
          "id": "debate1",
          "votes": Object {
            "totalCount": 5,
          },
          "yesVotes": Object {
            "totalCount": 4,
          },
        },
        "timeRange": Object {
          "endAt": "2030-03-10 00:00:00",
        },
        "timeless": false,
        "url": "step/123",
      }
    }
    title="blabla le title"
    voteState="NONE"
  />
  <ForwardRef
    align="center"
    direction="column"
    width="100%"
  >
    <DebateStepPageVote
      debateId="debate1"
      isAuthenticated={true}
      onSuccess={[Function]}
      viewerHasArgument={false}
    />
  </ForwardRef>
</Fragment>
`;

exports[`<DebateStepPageVoteAndShare/> renders correctly when timeless step 1`] = `
<Fragment>
  <Relay(DebateStepPageAbsoluteVoteAndShare)
    body="blabla le body"
    isAuthenticated={true}
    isMobile={false}
    setShowArgumentForm={[Function]}
    setVoteState={[Function]}
    showArgumentForm={true}
    step={
      Object {
        "$fragmentRefs": null,
        "$refType": null,
        "debate": Object {
          "$fragmentRefs": null,
          "allArguments": Object {
            "totalCount": 10,
          },
          "argumentsAgainst": Object {
            "totalCount": 5,
          },
          "argumentsFor": Object {
            "totalCount": 5,
          },
          "id": "debate1",
          "votes": Object {
            "totalCount": 5,
          },
          "yesVotes": Object {
            "totalCount": 4,
          },
        },
        "timeRange": Object {
          "endAt": null,
        },
        "timeless": true,
        "url": "step/123",
      }
    }
    title="blabla le title"
    voteState="NONE"
  />
  <ForwardRef
    align="center"
    direction="column"
    width="100%"
  >
    <DebateStepPageVote
      debateId="debate1"
      isAuthenticated={true}
      onSuccess={[Function]}
      viewerHasArgument={false}
    />
  </ForwardRef>
</Fragment>
`;
